UPGRADING TO JAVA 11